[feat] 대시보드 스탬프 통계 조회 기능 구현
