# src/routes/admin.stamp.routes.js
@@ -4,6 +4,7 @@ import {
     uploadStampImages, 
     postStampPolicy,
     patchStampPolicy,
+    getStampPolicy,
  } from '../controllers/admin.stamp.controller.js';
 import { authenticateJWT } from "../middlewares/authMiddleware.js";
 
@@ -14,6 +15,6 @@ router.use(authenticateJWT);
 router.post('/stamp-images', upload.array('images', 2), uploadStampImages);
 router.post('/stamp-policy', postStampPolicy);
 router.patch('/stamp-policy', patchStampPolicy);
-// router.get('/stamp-policy', getStampPolicy);
+router.get('/stamp-policy', getStampPolicy);
 
 export default router;
